Added update method for users
